2000-04-14  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* lots of build system files: changes for the global id stuff.

	* src/engine/GNCId.c: engine globally unique id api implementation.

	* src/engine/guid/md5.c: taken from GNU textutils.

	* src/engine/guid/guid.c: new file with routines for generating
	globally unique ids.

2000-04-10  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* doc/README: only the environment variable LANG needs to
	be set to change the locale.

2000-04-09  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/scm/srfi/srfi-1.r5rs.scm: renamed 'list-index' to
 	'list-index-pred'. guile-1.3.4 defines a list-index with
	different api and semantics.

	* configure.in: make gnucash.spec configured

	* rpm/gnucash.spec.in: new file, same as old gnucash.spec, but
	with @VERSION@ instead of a hard-coded version number. Removed
	gnucash.spec.

	* src/scm/prefs.scm: make the default field types be description
 	and total

	* src/gnome/window-main.c (gnc_configure_account_tree): set the
	state of the total field

	* src/gnome/account-tree.c: add in the new total field

	* src/gnome/dialog-utils.c: add the new account field key
 	ACCOUNT_TOTAL. This key refers to the account's balance plus the
 	balances of all children. The ACCOUNT_BALANCE key now refers to
 	the balance of the account itself, without children.

2000-04-08  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/scm/report/balance-and-pnl.scm: remove the report description.
	It just looked weird!

	* src/scm/command-line.scm (gnc:prefs-show-version): use the
	configured version instead of hard-coding it.

	* src/scm/bootstrap.scm.in (gnc:version): configure this guile
	variable with the gnucash version info.

	* src/SplitLedger.c (xaccLoadXferCell): == not = Doh!!!

2000-04-07  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/engine/Query.c (PROLOG): move declaration of da and db
	locals into the macros that actually use them. This gets rid
	of some annoying warnings.
