@@ -553,6 +553,7 @@ Tyson Dowd   <tyson@tyse.net> for config/make patches & debian maint
 Koen D'Hondt <ripley@xs4all.nl> for Solaris patches to XmHTML
 Bob Drzyzgula <bob@mostly.com> for budgeting design notes
 Paul Fenwick <pjf@schools.net.au> ASX support
+Hubert Figuiere <hfiguiere@teaser.fr> patch to gnc-prices
 Jan-Uwe Finck <ju_finck@mail.netwave.de> for German message translation
 Ron Forrester <rjf@aracnet.com> for gnome patches
 Dave Freese <DFreese@osc.uscg.mil> for leap-year fix
